--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gluestack-style/react": "^1.0.57",
     "@gluestack-ui/config": "^1.1.20",
     "@gluestack-ui/themed": "^1.1.73",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/geolocation": "^3.3.0",
     "@react-native-firebase/app": "^20.5.0",
     "@react-native-firebase/auth": "^20.5.0",
