--- a/ios/GeoPhotoLogger/Info.plist
+++ b/ios/GeoPhotoLogger/Info.plist
@@ -33,11 +33,17 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-<string>We need access to your camera to take photos</string>
-<key>NSLocationWhenInUseUsageDescription</key>
-<string>We need your location to tag photos</string>
-<key>NSPhotoLibraryUsageDescription</key>
-<string>We need access to save photos</string>
+	<string>EzyTrack requests you permission to access camera so you can upload photos. The privacy of your data will be maintained strictly on EzyTrack server only.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>EzyTrack requests your permission to access the location, With the help of this feature, We will use your location to connect with users.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>EzyTrack requests your permission to access the location, With the help of this feature, We will use your location to connect with users.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>EzyTrack requests your permission to access the location, With the help of this feature, We will use your location to connect with users.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Your message to user when the microsphone is accessed for the first time</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>EzyTrack requests you permission to access photo so you can upload profile picture. The privacy of your data will be maintained strictly on EzyTrack server only.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
