--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,12 +27,6 @@ setup_permissions([
 ])
 
 
-
-# Use static frameworks for React Native Firebase
-  config = use_native_modules!
-  use_frameworks! :linkage => :static
-  $RNFirebaseAsStaticFramework = true
-
 # Dynamic linkage fallback if needed
 linkage = ENV['USE_FRAMEWORKS']
 if linkage != nil
@@ -40,20 +34,35 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-# React Native Maps dependencies
-rn_maps_path = '../node_modules/react-native-maps'
-pod 'react-native-maps', :path => rn_maps_path
-pod 'GoogleMaps'
-pod 'Google-Maps-iOS-Utils'
 
 
- pod 'Firebase/Analytics', :modular_headers => true
-  pod 'Firebase/Auth', :modular_headers => true
-  pod 'Firebase/Core', :modular_headers => true
-  pod 'Firebase/Firestore', :modular_headers => true
 
 target 'GeoPhotoLogger' do
   config = use_native_modules!
+
+  # React Native Maps dependencies
+rn_maps_path = '../node_modules/react-native-maps'
+pod 'react-native-maps', :path => rn_maps_path
+pod 'react-native-google-maps', :path => rn_maps_path
+pod 'react-native-maps-generated', :path => rn_maps_path
+
+
+# Firebase pods with modular headers
+  pod 'Firebase/Analytics', :modular_headers => true
+  pod 'Firebase/Auth', :modular_headers => true
+  pod 'Firebase/Core', :modular_headers => true
+  pod 'Firebase/Firestore', :modular_headers => true
+  pod 'GoogleUtilities', :modular_headers => true
+  # pod 'FirebaseCore', :modular_headers => true
+  # pod 'FirebaseCoreInternal', :modular_headers => true
+  # pod 'FirebaseCoreExtension', :modular_headers => true
+  # pod 'FirebaseFirestoreInternal', :modular_headers => true
+  pod 'gRPC-Core', :modular_headers => true 
+  pod 'gRPC-C++', :modular_headers => true
+
+  # Use static frameworks for React Native Firebase
+  use_frameworks! :linkage => :static
+  $RNFirebaseAsStaticFramework = true
 
   use_react_native!(
     :path => config[:reactNativePath],
@@ -74,17 +83,6 @@ post_install do |installer|
     # :ccache_enabled => true
   )
 
-  # New BoringSSL-GRPC modification
-  installer.pods_project.targets.each do |target|
-    if target.name == 'BoringSSL-GRPC'
-      target.source_build_phase.files.each do |file|
-        if file.settings && file.settings['COMPILER_FLAGS']
-          flags = file.settings['COMPILER_FLAGS'].split
-          flags.reject! { |flag| flag == '-GCC_WARN_INHIBIT_ALL_WARNINGS' }
-          file.settings['COMPILER_FLAGS'] = flags.join(' ')
-        end
-      end
-    end
-  end
+ 
 end
 end
